# gtk-layer-shell-test

./: .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.vue  gradients.css  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: media.rs  mod.rs  system.rs  workspaces.rs
src/components/: Chip.vue  MediaPlayer.vue
src/components/indicators/: Cpu.vue  Date.vue  Disk.vue  Network.vue  Ram.vue
src/components/widgets/: MediaPlayer.vue  Workspaces.vue
src/stores/: system.ts
src/types/: MediaInfo.ts  SystemInfo.ts  WorkspaceInfo.ts
