[package]
name = "gtk-layer-shell-test"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "gtk_layer_shell_test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri (GTK4 гілка)
tauri = { git = "https://github.com/rmakestrash-jpg/tauri.git", branch = "gtk4", features = [] }
tauri-runtime-wry = { git = "https://github.com/rmakestrash-jpg/tauri.git", branch = "gtk4", package = "tauri-runtime-wry" }

# GTK4 та webkit6 (замість старих)
gtk4 = "0.10"
webkit6 = "0.5"      # замість webkit2gtk
gdk4 = "0.9"
glib = "0.21.5"
cairo-rs = "0.18"

# ✨ НОВИНКА: gtk4-layer-shell
gtk4-layer-shell = "0.7.1"

# Інші залежності...
crossbeam-channel = "0.5"
once_cell = "1.21.3"
sysinfo = "0.38.2"
tokio = { version = "1.49.0", features = ["time"] }
serde = "1.0.228"
serde_json = "1.0.149"
anyhow = "1.0.102"
anyhow_serde = "1.0.101"
mpris = "2.0.1"
itertools = "0.14.0"
system-tray = "0.2"           # форк stray з оновленнями
image = "0.24"                 # для конвертації піксмап у PNG
base64 = "0.21"
futures-util = "0.3"
zbus = "5.14.0"

[patch.crates-io]
tao = { git = "https://github.com/rmakestrash-jpg/tao", branch = "gtk4-v0.34.5" }
wry = { git = "https://github.com/rmakestrash-jpg/wry", branch = "gtk4" }
muda = { git = "https://github.com/rmakestrash-jpg/muda", branch = "feat/gtk4" }
tray-icon = { git = "https://github.com/rmakestrash-jpg/tray-icon", branch = "feat/gtk4" }
